--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^3.4.4",
+    "leaflet": "^1.6.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
+    "vue2-filters": "^0.9.1",
+    "vue2-leaflet": "^2.4.2",
     "vuetify": "^2.2.1"
   },
   "devDependencies": {
@@ -20,8 +24,8 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "sass": "^1.24.2",
-    "sass-loader": "^8.0.0",
+    "sass": "^1.26.3",
+    "sass-loader": "^8.0.2",
     "vue-cli-plugin-vuetify": "^2.0.3",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.4.3"
